"""
Author: Lynn Ye
Created on: 2025/9/15
Brief: 
"""


class Arranger:
    def __init__(self):
        pass

    def predict_midi(self):
        raise NotImplementedError
        # return 60

    # def update_context(self, ):


def main():
    print("Hello, world!")


if __name__ == "__main__":
    main()
